# VIDEO

./: .gitignore  CMakeLists.txt  README.md  make.sh
include/: camera.h  encode_video.h  log.h  main.h
include/FFmpeg/libavutil/: ffversion.h
include/linux/: list_.h
include/linux/include/uapi/linux/: videodev2.h
other/demo_ko/: Makefile  hello.c  main.c
other/uvc_ko/include/config/: auto.conf  auto.conf.cmd  tristate.conf
other/uvc_ko/uvc/: Makefile  uvc_driver.c
src/: camera.c  encode_video.c  main.c
